maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:30: error: Unmatched closing brace '}' ignored here
}
^