maze.island.IslandMaze.scala.code
override def run() {
  while (!isOverBaggle) {
    while (!isFacingWall())
  	{forward()}
	right()
	while (!isFacingWall() && getDirection()!=Direction.NORTH)
    {forward(); right()}; 
  			left()}
	}                 
}















